--- a/.github/workflows/deploy-dags.yml
+++ b/.github/workflows/deploy-dags.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    # ✅ ต้องไปสร้าง Environment ชื่อนี้ใน repo settings และตั้ง Required reviewers
+    environment: mwaa-prod
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
