--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -12,9 +12,14 @@ jobs:
   prepare:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Save latest SHA for approval
         run: |
+          mkdir -p .github
           echo "${GITHUB_SHA}" > .github/DEPLOY_SHA
+
       - name: Commit DEPLOY_SHA
         uses: EndBug/add-and-commit@v9
         with:
